tests/ui/borrowck/move-error-snippets.stderr
error[E0507]: cannot move out of static item `D`
  --> $DIR/move-error-snippets-ext.rs:5:17
   |
LL |         let a = $c;
   |                 ^^ move occurs because `D` has type `A`, which does not implement the `Copy` trait
   |
  ::: $DIR/move-error-snippets.rs:21:1
   |
LL | sss!();
   | ------ in this macro invocation
   |
note: if `A` implemented `Clone`, you could clone the value
  --> $DIR/move-error-snippets.rs:9:1
   |
LL | struct A;
   | ^^^^^^^^ consider implementing `Clone` for this type
   |
  ::: $DIR/move-error-snippets-ext.rs:5:17
   |
LL |         let a = $c;
   |                 -- you could clone this value
   = note: this error originates in the macro `aaa` which comes from the expansion of the macro `sss` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
   |
LL |         let a = &$c;
   |                 +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
